# Monomark

./: .gitignore  .mcp.json  AUDIT-REPORT.md  CLAUDE.md  MONOMARK_PHASE_7.md  electron-builder.yml  index.html  install.ps1  package-lock.json  package.json  release.ps1  tsconfig.node.json  upgrade-now.ps1  vite.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: build-tauri.yml
Marrow/: MCP_TOOL_NAME_FIX.md
electron/: autostart.ts  main.ts  preload.ts  store.ts  tray.ts  updater.ts
electron/ai/: engine.ts  llama-worker.ts  manager.ts  types.ts
electron/blocks/: classify.ts  db.ts  indexer.ts  parser.ts  relationCache.ts  relationJudge.ts  search.ts  summarizer.ts
electron/ipc/: ai.ts  app.ts  index.ts  mcp.ts  search.ts  terminal.ts  updater.ts  vault.ts  window.ts
electron/mcp/: clientConfig.ts  paths.ts  server.ts
scripts/: afterPack.js  cleanup.ps1  generate-icons.mjs  install-portable.ps1  installer.nsh  mcp-healthcheck.mjs  token-savings-check.mjs
sidecar-core/: store.ts  watcher.ts
sidecar-core/ai/: catalog.ts  keyStorage.ts  registry.ts  (+1 more)
src/: App.module.css  App.tsx  PreviewApp.module.css  PreviewApp.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: sidecar.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: build.mjs  electron-shim.ts  index.ts  store-shim.ts
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: autostart.rs  claude_integration.rs  keychain.rs  mod.rs  settings.rs  sidecar.rs  vault.rs  watcher.rs  window.rs
(+143 files in other folders)
