[package]
name = "monomark"
version = "0.1.0"
description = "A focused markdown knowledge-base"
authors = ["Monomark <hello@marrow.app>"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
notify = "8"
notify-debouncer-mini = "0.6"
base64 = "0.22"
tokio = { version = "1", features = ["fs"] }
tauri-plugin-updater = "2"
